--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,22 @@
 {% macro displayNewsList(news_list) %}
 
-    {% for news in news_list %}
-        <li>{{ news.name}}</li>
-    {% endfor %}
+{% for news in news_list %}
+
+<div class="container-fluid">
+    <div class="row">
+        {% for news in news_list %}
+        <div class="col-md-4 card">
+            <div class="thumbnail">
+                <a href="">{{ news.url }} </a>
+                <h3>{{ news.name}}</h3>
+                <p>{{news.description | truncate(10)}}</p>
+                <a href="/news/{{news.url}}" target="_blank"> Read More </a>
+
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endfor %}
 
 {% endmacro %}
