--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -5,16 +5,16 @@
 
     <!-- Poster background -->
     <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath" style="background: url({{movie.poster}}) no-repeat center center">
+    
         </div>
 
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
-            <h3>{{ news.name }}</h3>
+            {%for article in articles%}
+            <a href="{{ article.url }}">{{ article.url }}</a> 
 
-            <p class="overview"> {{ news.description }}</p>
-            <p class="ratings"> <b> {{ news.url }}</b> - <i>{{ news.category}} votes </i> </p>
+            
 
-
+            {% endfor %}
         </div>
     </div>
 
