--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,22 +14,22 @@
     <nav class="navbar">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <h1>AS <span class = "news">News</span>  </h1>
+          <h1>Quick <span class = "news">News</span>  </h1>
        </a>
       </div>
     </nav>
     
     <div class="row">
       <div class="col-md-7">
-        <h3>EXPLORE TODAY</h3>
+        <h3>CURIOUS ABOUT WHATS HAPPENING AROUND THE GLOBE?</h3>
         <h4>
-        THROUGH THE EYES OF OUR JOURNALISTS AND PHOTOGRAPHERS 
+        CHECK OUT TODAY!
         </h4>
       </div>
       <div class="col-md-5">
         <div class="circle float">
-          <h3 class = "text-circle">DISCOVER
-            <p class = "para">Amazing content</p>
+          <h3 class = "text-circle">Enjoy!
+            <p class = "para">😉</p>
           </h3>
         </div>
       </div>
