--- a/app/static/soure-artces.css
+++ b/app/static/soure-artces.css
@@ -3,7 +3,7 @@ img{
   margin: 3rem auto;
 }
 body{
-  background-color: black !important;
+  background-color: rgb(175, 172, 172) !important;
 }
 p,h1,hr{
   color:#fff !important;
