--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -13,7 +13,7 @@
   <img src="{{article.urlToImage}}" alt="">
   <p>{{article.content}}</p>
   <div>
-    <a href="{{article.url}}"><button class = "btn btn-secondary btn-lg" type= "button">Read More..</button>
+    <a href="{{article.url}}"><button class = "btn btn-warning btn-lg" type= "button">Read More..</button>
     </a>
   </div>
   <p class = "text-muted">By:{{article.author}}</p>
